; ModuleID = '/home/carl/AnghaBench/libuv/test/extr_test-timer.c_repeat_cb.c'
source_filename = "/home/carl/AnghaBench/libuv/test/extr_test-timer.c_repeat_cb.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [11 x i8] c"REPEAT_CB\0A\00", align 1
@repeat_cb_called = common dso_local global i32 0, align 4
@repeat_close_cb = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*)* @repeat_cb to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @repeat_cb(i32* %0) #0 {
  %2 = alloca i32*, align 8
  store i32* %0, i32** %2, align 8
  %3 = call i32 @printf(i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str, i64 0, i64 0))
  %4 = load i32*, i32** %2, align 8
  %5 = icmp ne i32* %4, null
  %6 = zext i1 %5 to i32
  %7 = call i32 @ASSERT(i32 %6)
  %8 = load i32*, i32** %2, align 8
  %9 = call i32 @uv_is_active(i32* %8)
  %10 = icmp eq i32 1, %9
  %11 = zext i1 %10 to i32
  %12 = call i32 @ASSERT(i32 %11)
  %13 = load i32, i32* @repeat_cb_called, align 4
  %14 = add nsw i32 %13, 1
  store i32 %14, i32* @repeat_cb_called, align 4
  %15 = load i32, i32* @repeat_cb_called, align 4
  %16 = icmp eq i32 %15, 5
  br i1 %16, label %17, label %21

17:                                               ; preds = %1
  %18 = load i32*, i32** %2, align 8
  %19 = load i32, i32* @repeat_close_cb, align 4
  %20 = call i32 @uv_close(i32* %18, i32 %19)
  br label %21

21:                                               ; preds = %17, %1
  ret void
}

declare dso_local i32 @printf(i8*) #1

declare dso_local i32 @ASSERT(i32) #1

declare dso_local i32 @uv_is_active(i32*) #1

declare dso_local i32 @uv_close(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
